# robotenv_ws_old

./: .gitattributes  .gitattributes.swp  .gitignore
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/phoxi_camera/: ConnectCamera.h  ConnectCameraRequest.h  ConnectCameraResponse.h  DeviceConnectionStatus.h  DeviceInformation.h  DeviceType.h  Empty.h  EmptyRequest.h  EmptyResponse.h  GetBool.h  GetBoolRequest.h  GetBoolResponse.h  GetDeviceList.h  GetDeviceListRequest.h  GetDeviceListResponse.h  GetFrame.h  GetFrameRequest.h  GetFrameResponse.h  GetHardwareIdentification.h  GetHardwareIdentificationRequest.h  GetHardwareIdentificationResponse.h  GetString.h  GetStringRequest.h  GetStringResponse.h  GetSupportedCapturingModes.h  GetSupportedCapturingModesRequest.h  GetSupportedCapturingModesResponse.h  IsAcquiring.h  IsAcquiringRequest.h  IsAcquiringResponse.h  IsConnected.h  IsConnectedRequest.h  IsConnectedResponse.h  PhoXiSize.h  SaveFrame.h  SaveFrameRequest.h  SaveFrameResponse.h  SaveLastFrame.h  SaveLastFrameRequest.h  SaveLastFrameResponse.h  (+10 more)
devel/lib/abb_driver/: motion_download_interface  robot_state
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/phoxi_camera/: ======phoxi_camera  get_poitcloud_topic.py  phoxi_camera
devel/lib/pick_and_place_env/: robot_test.py
devel/lib/pkgconfig/: abb_driver.pc  abb_irb1200_5_90_moveit_config.pc  abb_irb1200_5_90_moveit_config_12-05-23.pc  abb_irb1200_moveit_config.pc  abb_irb1200_moveit_config_USETHIS.pc  abb_irb1200_moveit_config_current.pc  abb_irb1200_moveit_config_test.pc  abb_irb1200_support.pc  abb_resources.pc  kinect2_bridge.pc  kinect2_calibration.pc  kinect2_registration.pc  kinect2_viewer.pc  phoxi_camera.pc  pick_and_place_env.pc
src/abb_robot_arm/abb_irb1200_moveit_config/: .setup_assistant  CMakeLists.txt
src/abb_robot_arm/abb_irb1200_moveit_config_test/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_robot_arm/abb_irb1200_support/: CMakeLists.txt
src/phoxi_camera/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE
src/phoxi_camera/cfg/: phoxi_camera.cfg
src/phoxi_camera/config/: phoxi_camera.yaml
src/phoxi_camera/include/phoxi_camera/: PhoXiConversions.h  PhoXiDeviceInformation.h  PhoXiInterface.h  RosConversions.h  RosInterface.h
src/phoxi_camera/meshes/collision/: PhoXi3DScannerSCollision.stl
src/phoxi_camera/meshes/visual/: PhoXi3DScannerS.dae
src/phoxi_camera/msg/: DeviceConnectionStatus.msg  DeviceInformation.msg  DeviceType.msg
src/phoxi_camera/scripts/: get_poitcloud_topic.py  phoxi_camera_test.py
src/phoxi_camera/src/: PhoXiInterface.cpp  RosInterface.cpp  phoxi_camera_node.cpp
src/phoxi_camera/srv/: GetDeviceList.srv
src/phoxi_camera/test/: README.md
src/phoxi_camera/test/gtest/: test_phoxi_api_interface.cpp
src/phoxi_camera/test/interfaces/: config.py  test_phoxi_camera_interfaces_exist.py  test_phoxi_camera_ros_interfaces.py
src/phoxi_camera/test/launch/: phoxi_api_interface_class.test  phoxi_camera_ros_interfaces.test  phoxi_camera_ros_interfaces_exist.test  run_phoxi_control.sh
src/phoxi_camera/urdf/: PhoXi3Dscanner.xacro  PhoXi3Dscanner_macro.xacro  PhoXi3Dscanner_macro_old.xacro  PhoXi3Dscanner_values.xacro
src/pick_and_place_env/: CMakeLists.txt  package.xml
src/pick_and_place_env/launch/: physical_robot_control.launch  planning_context.launch
src/pick_and_place_env/meshes/: Common_Flange.stl  Conveyor_Base.dae  Conveyor_Base.stl  Conveyor_Belt.dae  Conveyor_Belt.stl  PB-0013_Base.stl  PB-0013_Flange.stl  PB-0013_Left.stl  PB-0013_Right.stl  conveyor_belt_extra.stl
src/pick_and_place_env/scripts/: gripper_control.py  robot_test.py
src/pick_and_place_env/urdf/: Fixed_parts_macro.xacro  Fixed_parts_macro_old.xacro  calibration_tool_macro.xacro  conveyor_belt_macro.xacro  environment.xacro  (+1 more)
(+222 files in other folders)
